Version 1.1.11 (GitHub, 2020-02-13´4)
- Improvement of efficiency of ParetoDensityFunction using Rcpp by reducing computing time around 80 percent. Improvement is passed on to MDplot.

Version 1.1.11 (CRAN, 2020-02-13)
- Bugfix: Missing rgl packages in solaris combined with a CRAN check of Plot3D does not allow the package to install itself
- CombineCols: Robust alternative to \code{\link{cbind}} that fills missing values with nan instead of extending length of vector by duplicating elements

Version 1.1.10 (CRAN, 2020-02-02)
- DualaxisLinechart works now in combination with plotly::subplot ommitting the bug of subplot, see https://github.com/ropensci/plotly/issues/954
- MDplot has now two new sorting options for columns: increasing average or variance, or decreasing bimodality (using packages modes).
- Bugfix: MDplot bug fixed in case of two columns of which one is only NaN and in case of jittered not-finite values.
- Bugfix: ParetoDensityEstimationV2 bug for data with only two unique values fixed.
- Bugfix: MDplot4multiplevectors: rowr is depricated, hence the relevant function is internally integrated now in MDplot4multiplevectors
- Naming Convention: delted V2 in ParetoDensityEstimation, ParetoRadius and OptimalNoBins because these functions are now completly removed from the AdaptGauss package.

Version 1.1.9 (CRAN, 2019-11-10)
- Improvements in ClassMDplot in the case of Big Data (e.g. Flow Cytometry data of CLL)
- bugfix ABCbarplot: x-axis shows now correct prozentual values between 1 and 100.
- Pixelmatrix is now significantly fast by using geom_raster instead of geom_tile.
- Bugfix MDplot: Several whitespread unique values in large data vectors are visualized correctly. Option "RobustGaussian=TRUE" now works also if only one column of data is given as input.
- Bugfix ParetoDensityEstimationV2: Assumes now the dirac delta distribution for one ore two unique values in a given vector of data of arbitrary length.