@@ -8,6 +8,7 @@ export(ClassPDEplotMaxLikeli)
 export(Crosstable)
 export(Choroplethmap)
 export(CombineCols)
+export(DiagnosticAbility4Classifiers)
 export(DualaxisLinechart)
 export(DualaxisClassplot)
 export(Fanplot)
